--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ts-nestjs-angular-template</title>
+  <title>TaC</title>
   <base href="/"/>
 
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
